<?xml version="1.0"?>
<package format="2">
<name>ros_perception_utils</name>
<version>0.0.1</version>
<description>The ros_perception_utils package</description>
<author email="manhha1402@gmail.com">Manh Ha Hoang</author>
<maintainer email="manhha1402@gmail.com">Manh Ha Hoang</maintainer>
  <author>Manh Ha Hoang</author>
<license>MIT</license>
<buildtool_depend>catkin</buildtool_depend>
<depend>cmake_modules</depend>
<depend>cv_bridge</depend>
<depend>message_generation</depend>
<depend>image_transport</depend>
<depend>pcl_ros</depend>
<depend>rosbag</depend>
<depend>roscpp</depend>
<depend>roslaunch</depend>
<depend>roslib</depend>
<depend>rospy</depend>
<depend>std_msgs</depend>
<export>

</export>
</package>
